--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
 <div class="box" ></div> 
 
-     <img class="ima" src="../InCollage_20220901_053724866-removebg-preview.png" alt="ali" width="100" height="100">
+     <img class="ima" src="./InCollage_20220901_053724866-removebg-preview.png alt="ali width="100" height="100">
 
   <br><br><br><br>
  <br><br><br><br><br><br><br><br><br><br><br>
